--- a/src/App.css
+++ b/src/App.css
@@ -23,9 +23,11 @@
 }
 
 .map-view {
-  width: 500px;
-  height:500px;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  width: 100vw;
+  height: 100vh;
   border: solid 1px red;
-  padding: 5%;
 }
 
