modularized map and toggle components

--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,5 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-
-.map-view {
+.map-view{
   margin-left: auto;
   margin-right: auto;
   position: relative;
@@ -31,3 +8,7 @@
   border: solid 1px red;
 }
 
+
+.togglePanel{
+
+}
