nyc demographics layer added updated extent

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 
 .app{
-	display: flex;
-	flex-direction:column;
+	display: flex !important;
+	flex-direction: row;
 }
 
 
@@ -13,7 +13,7 @@
 
 
 .toggleContainer{
-	height: 100vh;
+	height: 5vh;
 	background-color: #222222;
 	color:#fff;
 	width: 20vw; 
